--- a/app/static/css/auth.css
+++ b/app/static/css/auth.css
@@ -289,12 +289,12 @@ body.dark-mode .form-row-inline input.flash-success {
 
 .apple-btn {
     background: #000;
-    color: #fff;
+    color: #ffffff;
 }
 
 .facebook-btn {
     background: #1877f2;
-    color: #fff;
+    color: #ffffff;
 }
 
 .x-btn {
